# earthquake-prediction

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  AUTHORS.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py  tox.ini
data/: sources.rtf
data/anss/: libcomcat-2.0.7-pyhd8ed1ab_2.tar.bz2
data/anss/libcomcat-2.0.7-pyhd8ed1ab_2/info/: about.json  files  index.json  link.json  paths.json
data/anss/libcomcat-2.0.7-pyhd8ed1ab_2/info/recipe/: conda_build_config.yaml  meta.yaml  meta.yaml.template
data/anss/libcomcat-2.0.7-pyhd8ed1ab_2/info/test/: run_test.bat  run_test.py  run_test.sh
data/greece/: 1900-2009_mkk.xls  earthquakes.csv
data/italy/: earthquakes.csv
data/mexico/: FORTRAN CODES.7z  Final Catalog_15 August_Revised USGS_Final.xls  Final FMS_1 May_Final.xls  Largest Earthquakes_23 Aug_final.xlsx  earthquakes.csv
data/russia/: earthquakes.csv
data/turkey/: earthquakes.csv
data/usgs/: earthquakes_1900_10.csv  earthquakes_1910_20.csv  earthquakes_1920_30.csv  earthquakes_1930_40.csv  earthquakes_1940_50.csv  earthquakes_1950_60.csv  earthquakes_1960_70.csv  earthquakes_1970.csv  earthquakes_1971.csv  earthquakes_1972.csv  earthquakes_1973.csv  earthquakes_1974.csv  earthquakes_1975.csv  earthquakes_1976.csv  earthquakes_1977.csv  earthquakes_1978.csv  earthquakes_1979.csv  earthquakes_1980.csv  earthquakes_1981.csv  earthquakes_1982.csv  earthquakes_1983.csv  earthquakes_1984.csv  earthquakes_1985.csv  earthquakes_1986.csv  earthquakes_1987.csv  earthquakes_1988.csv  earthquakes_1989.csv  earthquakes_1990.csv  earthquakes_1991.csv  earthquakes_1992.csv  earthquakes_1993.csv  earthquakes_1994.csv  earthquakes_1995.csv  earthquakes_1996.csv  earthquakes_1997.csv  earthquakes_1998.csv  earthquakes_1999.csv  earthquakes_2000.csv  earthquakes_2001.csv  earthquakes_2002.csv  (+20 more)
docs/: conf.py  index.rst
notebooks/: data.ipynb
src/eqml/: __init__.py  catalog.py  helpers.py  skeleton.py
tests/: conftest.py  test_skeleton.py
