[metadata]
name = eqml
description = Machine Learning Project for CS-C3240
author = Sinan Inel
author-email = sinan.inel@farsimple.com
license = mit
long-description = file: README.md
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/farsimple/eqml/
project-urls =
    Documentation = https://github.com/farsimple/eqml/
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Information Analysis

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.3a0,<4
install_requires =
    autologging >= 1.3.2,<2.0.0a0
    codetiming >= 1.3.0,<2.0.0a0
    dash >= 1.19.0,<2.0.0a0
    geopandas >= 0.9.0,<1.0.0a0
    haversine >= 2.3.0,<3.0.0a0
    kaleido >= 0.2.1,<1.0.0a0
    lmfit >= 1.0.1,<2.0.0a0
    matplotlib >= 3.3.0,<4.0.0a
    numpy >= 1.20.1,<2.0.0a0
    pandas >= 1.2.3,<2.0.0a0
    plotly >= 4.14.3,<5.0.0a0
    scikit-learn >= 0.24.1,<1.0.0a0
    scipy >= 1.5.4,<2.0.0a0
    shapely >= 1.7.1,<2.0.0a0
    wget >= 3.2.0,<4.0.0a0
    xarray >= 0.16.0,<1.0.0a0
python_requires = ==3.8.2

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
testing =
    isort == 4.3.21
    mypy == 0.782
    pytest == 6.0.1
    pytest-cov == 2.10.0
    pytest-mypy == 0.6.2
    pytest-pylint == 0.17.0
    pytest-isort == 1.1.0
    pytest-xdist == 1.34.0
    pytest-notebook == 0.6.1
docs =
    sphinx == 3.0.0
    sphinx-rtd-theme == 0.5.0
    sphinxcontrib-plantuml == 0.18
develop =
    tox == 3.18.1
    nbstripout == 0.3.9
    pre-commit == 2.9.3

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = quakeml.module:function
# For example:
# console_scripts =
#     fibonacci = quakeml.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True
addopts = tests/unit -rA --mypy --verbose --cov --cov-report term-missing --junitxml=test_report.xml

[mypy]
ignore_missing_imports = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.3.1
package = eqml
